force-app/main/default/objects/Case/fields/Account_Bill_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Bill_To_Country__c</fullName>
    <formula>Account.Bill_To_Country_Code__c</formula>
    <label>Account Bill To Country</label>
    <type>Text</type>
</CustomField>