force-app/main/default/objects/Case/fields/Account_Credit_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit_Analyst__c</fullName>
    <description>The Credit Analyst name from the account record</description>
    <formula>Account.Account_Credit_Analyst__r.Username</formula>
    <inlineHelpText>Account Team Credit Analyst</inlineHelpText>
    <label>Account Credit Analyst</label>
    <type>Text</type>
</CustomField>