force-app/main/default/objects/Case/fields/Account_Final_Destination__c.field-meta.xml
<CustomField>
    <fullName>Account_Final_Destination__c</fullName>
    <formula>Account.Final_Destination__c</formula>
    <label>Account Final Destination</label>
    <type>Text</type>
</CustomField>