force-app/main/default/objects/Case/fields/Account_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Account_Hierarchy__c</fullName>
    <label>Account Hierarchy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Corrected</fullName>
            </value>
            <value>
                <fullName>Incorrect</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>