force-app/main/default/objects/Case/fields/Account_NAM_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_NAM_Name__c</fullName>
    <description>The NAM Name on the Account related to the case</description>
    <formula>Account.NAM_Name__r.Email</formula>
    <inlineHelpText>The National Account Manager assigned to the Account</inlineHelpText>
    <label>Account NAM Name</label>
    <type>Text</type>
</CustomField>