force-app/main/default/objects/Case/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>The account owner of the account associated to the case</description>
    <formula>Account.Owner.Username</formula>
    <inlineHelpText>This is the owner of the account</inlineHelpText>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>