force-app/main/default/objects/Case/fields/Account_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Region_Code__c</fullName>
    <description>Region Code on the account related to the Case. Region code comes from M3.</description>
    <formula>Account.Region_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>M3 Region Code</inlineHelpText>
    <label>Account Region Code</label>
    <type>Text</type>
</CustomField>