force-app/main/default/objects/Case/fields/Account_Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Region_Name__c</fullName>
    <description>Region Name  on the account related to the case. Region comes from M3.</description>
    <formula>Account.Region_Name__c</formula>
    <label>Account Region Name</label>
    <type>Text</type>
</CustomField>