force-app/main/default/objects/Case/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US RWSS</fullName>
            </value>
            <value>
                <fullName>Branded Accounts</fullName>
            </value>
            <value>
                <fullName>International/Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>