force-app/main/default/objects/Case/fields/Added_to_Production__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Production__c</fullName>
    <description>This is the date that the case was released to production.</description>
    <inlineHelpText>This is the date that the case was released to production.</inlineHelpText>
    <label>Added to Production</label>
    <type>DateTime</type>
</CustomField>