force-app/main/default/objects/Case/fields/Added_to_Sandox__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Sandox__c</fullName>
    <description>This is the date that the case was released to Sandbox for QA testing.</description>
    <inlineHelpText>This is the date that the case was released to Sandbox for QA testing.</inlineHelpText>
    <label>Added to Sandbox</label>
    <type>DateTime</type>
</CustomField>