force-app/main/default/objects/Case/fields/Admin_Working_Case__c.field-meta.xml
<CustomField>
    <fullName>Admin_Working_Case__c</fullName>
    <description>Name of the SFDC Admin that is testing this Case.</description>
    <inlineHelpText>Please enter the name of the SFDC Admin that is testing this Case.</inlineHelpText>
    <label>Admin Working Case</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Centerstance</fullName>
            </value>
            <value>
                <fullName>Chad Anderson</fullName>
            </value>
            <value>
                <fullName>Cicily Punauakee</fullName>
            </value>
            <value>
                <fullName>Demand Chain</fullName>
            </value>
            <value>
                <fullName>Acumen Solutions</fullName>
            </value>
            <value>
                <fullName>Eagle Creek</fullName>
            </value>
            <value>
                <fullName>Kim Katzenmeyer</fullName>
            </value>
            <value>
                <fullName>No Admin</fullName>
            </value>
            <value>
                <fullName>Salesforce Administration Services</fullName>
            </value>
            <value>
                <fullName>Eirik Ackerman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>