force-app/main/default/objects/Case/fields/Agent_Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Escalation_Date__c</fullName>
    <description>Date/Time of Agent Escalation</description>
    <inlineHelpText>Date/Time of Agent Escalation</inlineHelpText>
    <label>Agent Escalation Date</label>
    <type>DateTime</type>
</CustomField>