force-app/main/default/objects/Case/fields/Agent_Escalation_to_Leader__c.field-meta.xml
<CustomField>
    <fullName>Agent_Escalation_to_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Agent can mark the case to be escalated to a Lead, Manager, or Leadership group</description>
    <inlineHelpText>Agent can mark a case to be escalated to a Lead, Manager, or Leadership group</inlineHelpText>
    <label>Agent Escalation to Leader</label>
    <type>Checkbox</type>
</CustomField>