force-app/main/default/objects/Case/fields/Alignment_to_Corp_Goals__c.field-meta.xml
<CustomField>
    <fullName>Alignment_to_Corp_Goals__c</fullName>
    <description>Describes how this request when fulfilled, will align with Corporate Goals</description>
    <inlineHelpText>Describes how this request when fulfilled, will align with Corporate Goals</inlineHelpText>
    <label>Alignment to Corp Goals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Helps develop high performing talent</fullName>
            </value>
            <value>
                <fullName>Helps Heritage business globally</fullName>
            </value>
            <value>
                <fullName>Helps increase productivity</fullName>
            </value>
            <value>
                <fullName>Helps increase industrial market share</fullName>
            </value>
            <value>
                <fullName>Helps retail competitive advantage</fullName>
            </value>
            <value>
                <fullName>Helps Vasque brand</fullName>
            </value>
            <value>
                <fullName>Increased margins</fullName>
            </value>
            <value>
                <fullName>Increased revenue</fullName>
            </value>
            <value>
                <fullName>Involves Red Wing community</fullName>
            </value>
            <value>
                <fullName>WOW! our customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>