force-app/main/default/objects/Case/fields/Anticipated_Value__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Value__c</fullName>
    <formula>Opportunity__r.Anticipated_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anticipated Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>