force-app/main/default/objects/Case/fields/Assign_Case_to_Shipping_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assign_Case_to_Shipping_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this box is checked the case is routed to the Shipping Queue</description>
    <inlineHelpText>When this box is checked the case is routed to the Shipping Queue</inlineHelpText>
    <label>Assign Case to Shipping Queue</label>
    <type>Checkbox</type>
</CustomField>