force-app/main/default/objects/Case/fields/Assortment_to_be_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Assortment_to_be_Purchased__c</fullName>
    <label>Assortment to be Purchased</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Irish Setter Hunt</fullName>
            </value>
            <value>
                <fullName>Irish Setter Work</fullName>
            </value>
            <value>
                <fullName>Outside Line</fullName>
            </value>
            <value>
                <fullName>Red Wing Work</fullName>
            </value>
            <value>
                <fullName>Red Wing Heritage</fullName>
            </value>
            <value>
                <fullName>Vasque</fullName>
            </value>
            <value>
                <fullName>WORX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>