force-app/main/default/objects/Case/fields/Authorization_Form_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Form_Created_By__c</fullName>
    <label>Authorization Form Created By</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RWSC</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>