force-app/main/default/objects/Case/fields/BA_Analysis__c.field-meta.xml
<CustomField>
    <fullName>BA_Analysis__c</fullName>
    <description>BA Analysis</description>
    <inlineHelpText>BA requirements gathering and documentation in coordination with the business.</inlineHelpText>
    <label>BA Analysis</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>