force-app/main/default/objects/Case/fields/BA_Configuration__c.field-meta.xml
<CustomField>
    <fullName>BA_Configuration__c</fullName>
    <description>BA Activities including analysis, design, config, deploy, training, communication, project management</description>
    <inlineHelpText>BA Activities including analysis, design, config, deploy, training, communication, project management</inlineHelpText>
    <label>BA Activities</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>