force-app/main/default/objects/Case/fields/BA_Design__c.field-meta.xml
<CustomField>
    <fullName>BA_Design__c</fullName>
    <description>BA Design</description>
    <inlineHelpText>Creation of BA solution design based on requirements.</inlineHelpText>
    <label>BA Design</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>