force-app/main/default/objects/Case/fields/BA_Unit_Testing__c.field-meta.xml
<CustomField>
    <fullName>BA_Unit_Testing__c</fullName>
    <description>BA Unit Testing</description>
    <inlineHelpText>BA Unit testing of the solution to ensure quality before UAT.</inlineHelpText>
    <label>BA Unit Testing</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>