force-app/main/default/objects/Case/fields/Bid_Contract_Due__c.field-meta.xml
<CustomField>
    <fullName>Bid_Contract_Due__c</fullName>
    <label>Bid/Contract Due</label>
    <type>Date</type>
</CustomField>