force-app/main/default/objects/Case/fields/Bid_Number__c.field-meta.xml
<CustomField>
    <fullName>Bid_Number__c</fullName>
    <label>Bid Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>