force-app/main/default/objects/Case/fields/Big_Box_Retailer_Name__c.field-meta.xml
<CustomField>
    <fullName>Big_Box_Retailer_Name__c</fullName>
    <description>The name of the Big Box Retailer involved on the Consumer Case - used in reporting</description>
    <inlineHelpText>The name of the Big Box Retailer involved on the Consumer Case - used in reporting</inlineHelpText>
    <label>Big Box Retailer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>