force-app/main/default/objects/Case/fields/Billing_Attributes_Grouping_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Billing_Attributes_Grouping_Adjustment__c</fullName>
    <label>Billing Attributes/Grouping Adjustment</label>
    <type>TextArea</type>
</CustomField>