force-app/main/default/objects/Case/fields/Billing_Contact_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Adjustment__c</fullName>
    <label>Billing Contact Adjustment</label>
    <type>TextArea</type>
</CustomField>