force-app/main/default/objects/Case/fields/Billing_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Location_Address__c</fullName>
    <label>Billing Location Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Correct</fullName>
            </value>
            <value>
                <fullName>Incorrect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>