force-app/main/default/objects/Case/fields/Billing_Location_Address_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Billing_Location_Address_Adjustments__c</fullName>
    <label>Billing Location Address Adjustments</label>
    <type>TextArea</type>
</CustomField>