force-app/main/default/objects/Case/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <inlineHelpText>Identify the brand(s) involved in this Case</inlineHelpText>
    <label>Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carhartt</fullName>
            </value>
            <value>
                <fullName>Irish Setter Brands (Work &amp; Hunt)</fullName>
            </value>
            <value>
                <fullName>Irish Setter Hunt</fullName>
            </value>
            <value>
                <fullName>Irish Setter Work</fullName>
            </value>
            <value>
                <fullName>Red Wing</fullName>
            </value>
            <value>
                <fullName>Red Wing Brand</fullName>
            </value>
            <value>
                <fullName>Red Wing Brand - Other</fullName>
            </value>
            <value>
                <fullName>Red Wing Garments</fullName>
            </value>
            <value>
                <fullName>Red Wing Heritage</fullName>
            </value>
            <value>
                <fullName>Vasque</fullName>
            </value>
            <value>
                <fullName>WORX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>