force-app/main/default/objects/Case/fields/Brief_Problem_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Brief_Problem_Analysis__c</fullName>
    <label>Brief Problem Analysis</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>