force-app/main/default/objects/Case/fields/BTC_Type_Detail__c.field-meta.xml
<CustomField>
    <fullName>BTC_Type_Detail__c</fullName>
    <label>BTC Type Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bid/Tender</fullName>
            </value>
            <value>
                <fullName>Contract/Agreement</fullName>
            </value>
            <value>
                <fullName>Customer Form</fullName>
            </value>
            <value>
                <fullName>Program Agreement Redlines</fullName>
            </value>
            <value>
                <fullName>RWSS Contracts</fullName>
            </value>
            <value>
                <fullName>Shipping/Routing Updates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>