force-app/main/default/objects/Case/fields/Budget_Approved__c.field-meta.xml
<CustomField>
    <fullName>Budget_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the budget is approved.</description>
    <inlineHelpText>Check this box if the budget is approved.</inlineHelpText>
    <label>Budget Approved</label>
    <type>Checkbox</type>
</CustomField>