force-app/main/default/objects/Case/fields/Budget_Category__c.field-meta.xml
<CustomField>
    <fullName>Budget_Category__c</fullName>
    <description>This field is used to categorize Salesforce Change Requests into categories for budgeting</description>
    <inlineHelpText>Please enter the budget category for this Salesforce Change Request</inlineHelpText>
    <label>*Delete* Budget Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer WOW!</fullName>
            </value>
            <value>
                <fullName>New Development</fullName>
            </value>
            <value>
                <fullName>Production Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>