force-app/main/default/objects/Case/fields/Budget_Type__c.field-meta.xml
<CustomField>
    <fullName>Budget_Type__c</fullName>
    <description>This is the budget type that approved funding will come from.</description>
    <inlineHelpText>Please enter the budget type that approved funding will come from.</inlineHelpText>
    <label>Budget Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Budget_Approved__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Business Technology</fullName>
            </value>
            <value>
                <fullName>Multi-Channel</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>