force-app/main/default/objects/Case/fields/Business_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Description__c</fullName>
    <description>Short business description</description>
    <inlineHelpText>Please enter a Short business description.</inlineHelpText>
    <label>Business Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>