force-app/main/default/objects/Case/fields/Business_Partner__c.field-meta.xml
<CustomField>
    <fullName>Business_Partner__c</fullName>
    <description>Business partner that works with the business unit making the request</description>
    <label>Business Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jackie Johnson</fullName>
            </value>
            <value>
                <fullName>Paige Stajkowski</fullName>
            </value>
            <value>
                <fullName>Kim Katzenmeyer</fullName>
            </value>
            <value>
                <fullName>Larissa Scott</fullName>
            </value>
            <value>
                <fullName>Chris Doman</fullName>
            </value>
            <value>
                <fullName>Jeff Harvey</fullName>
            </value>
            <value>
                <fullName>Jay Wardle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>