force-app/main/default/objects/Case/fields/Business_Value_or_ROI__c.field-meta.xml
<CustomField>
    <fullName>Business_Value_or_ROI__c</fullName>
    <description>Used to help determine priority. Business Value or Return on Investment.</description>
    <inlineHelpText>The dollar amount for Return on Investment or a description of the business value. This is used to help determine priority.</inlineHelpText>
    <label>Business Value or ROI</label>
    <type>TextArea</type>
</CustomField>