force-app/main/default/objects/Case/fields/Caller_Type__c.field-meta.xml
<CustomField>
    <fullName>Caller_Type__c</fullName>
    <label>Caller Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <color>#0B6FCE</color>
                <label>Account</label>
            </value>
            <value>
                <fullName>Consumer</fullName>
                <color>#78C953</color>
                <label>Consumer</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <color>#E27001</color>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Internal</fullName>
                <color>#A845DC</color>
                <label>Internal</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <color>#F3D904</color>
                <label>Not Applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>