force-app/main/default/objects/Case/fields/Case_Age_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_in_Days__c</fullName>
    <description>Case Age in Days</description>
    <formula>IF(
NOT(ISPICKVAL(Status, &quot;Closed&quot;)),  
NOW() - CreatedDate,
ClosedDate - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is that number of days the case has been Open.</inlineHelpText>
    <label>Case Age in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>