force-app/main/default/objects/Case/fields/Case_Creator_Role__c.field-meta.xml
<CustomField>
    <fullName>Case_Creator_Role__c</fullName>
    <description>Role of the user who created the case. Needed for IA2.0 escalation rule.</description>
    <formula>CreatedBy.UserRole.Name</formula>
    <label>Case Creator Role</label>
    <type>Text</type>
</CustomField>