force-app/main/default/objects/Case/fields/Case_Notes__c.field-meta.xml
<CustomField>
    <fullName>Case_Notes__c</fullName>
    <description>Notes</description>
    <inlineHelpText>Notes</inlineHelpText>
    <label>Case Notes</label>
    <type>TextArea</type>
</CustomField>