force-app/main/default/objects/Case/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <description>This is a new case origin fields to support the web to case.</description>
    <inlineHelpText>This is a case origin fields to support the web to case.</inlineHelpText>
    <label>Obsolete Case Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Heritage Website</fullName>
            </value>
            <value>
                <fullName>Vasque Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>