force-app/main/default/objects/Case/fields/Case_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Name__c</fullName>
    <formula>IF(
  ISBLANK(Owner:User.Id), /* If blank, it&apos;s a queue */
  Owner:Queue.QueueName,
  IF(ISBLANK(Owner:User.FirstName),&apos;&apos;,Owner:User.FirstName + &apos; &apos;) + Owner:User.LastName
)</formula>
    <label>Case Owner Name</label>
    <type>Text</type>
</CustomField>