force-app/main/default/objects/Case/fields/Case_Source__c.field-meta.xml
<CustomField>
    <fullName>Case_Source__c</fullName>
    <description>Values for &quot;Case Source&quot; from National Accounts</description>
    <label>Case Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
                <color>#0B6FCE</color>
                <label>Consumer</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <color>#78C953</color>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Store</fullName>
                <color>#E27001</color>
                <label>Store</label>
            </value>
            <value>
                <fullName>Internal</fullName>
                <color>#A845DC</color>
                <label>Internal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>