force-app/main/default/objects/Case/fields/Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Type__c</fullName>
    <description>Case Sub Type for RWBAA Cases.  Corresponds to MSTS list.</description>
    <label>Case Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Account Inquiry</fullName>
            </value>
            <value>
                <fullName>Account Name</fullName>
            </value>
            <value>
                <fullName>Account Restructure</fullName>
            </value>
            <value>
                <fullName>Advanced Return</fullName>
            </value>
            <value>
                <fullName>Adverse Letters</fullName>
            </value>
            <value>
                <fullName>Aging Notif/Delinq Details</fullName>
            </value>
            <value>
                <fullName>Altus</fullName>
            </value>
            <value>
                <fullName>Authorization</fullName>
            </value>
            <value>
                <fullName>Auto Reply</fullName>
            </value>
            <value>
                <fullName>AWI</fullName>
            </value>
            <value>
                <fullName>Backorder Delay</fullName>
            </value>
            <value>
                <fullName>Banking Info Update</fullName>
            </value>
            <value>
                <fullName>Batch/Loader</fullName>
            </value>
            <value>
                <fullName>Billed to Incorrect Customer/Incorrect Card</fullName>
            </value>
            <value>
                <fullName>Billing Change</fullName>
            </value>
            <value>
                <fullName>Billing Error</fullName>
            </value>
            <value>
                <fullName>C2C</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Chargeback Requested/Credit Not Processed</fullName>
            </value>
            <value>
                <fullName>Check by Phone/CC Link</fullName>
            </value>
            <value>
                <fullName>CLI</fullName>
            </value>
            <value>
                <fullName>Collection Checks</fullName>
            </value>
            <value>
                <fullName>Contact Add/Update</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Credit Issue</fullName>
            </value>
            <value>
                <fullName>Credit Line Status</fullName>
            </value>
            <value>
                <fullName>Credit Review</fullName>
            </value>
            <value>
                <fullName>Credit Transaction (FC/QQ Only)</fullName>
            </value>
            <value>
                <fullName>Customer Communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>